clusters/homelab/monitoring/ingressroute-grafana.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.donlab.uk`)
      services:
        - name: grafana
          port: 80
